cm4all-workshop (2.0.14) unstable; urgency=low

  * spawn: implement an init process for PID namespaces

 --   

cm4all-workshop (2.0.13) unstable; urgency=low

  * workshop: show plan name and job id in log messages
  * workshop: add option sends structured log messages to systemd journal
  * workshop: add database column "log" (requires manual migration)
  * workshop: add plan settings "rlimits", "sched_idle", "ioprio_idle", "idle"
  * workshop: kill process after timeout expires
  * spawn: fix file descriptor leaks
  * spawn: unblock signals

 -- Max Kellermann <mk@cm4all.com>  Fri, 23 Jun 2017 17:52:34 -0000

cm4all-workshop (2.0.12) unstable; urgency=low

  * cron: add setting "tag" which translates to LISTENER_TAG

 -- Max Kellermann <mk@cm4all.com>  Tue, 13 Jun 2017 07:15:49 -0000

cm4all-workshop (2.0.11) unstable; urgency=low

  * cron: pass partition name in CRON packet, not in LISTENER_TAG

 -- Max Kellermann <mk@cm4all.com>  Mon, 12 Jun 2017 11:16:58 -0000

cm4all-workshop (2.0.10) unstable; urgency=low

  * cron: pass LISTENER_TAG to translation server

 -- Max Kellermann <mk@cm4all.com>  Fri, 09 Jun 2017 13:01:54 -0000

cm4all-workshop (2.0.9) unstable; urgency=low

  * sql: write "NEW" in upper-case letters in PostgreSQL RULE
  * cron: system call filter
  * cron: support FORBID_USER_NS
  * cron: store HTTP errors in the results table
  * cron: implement email notification

 -- Max Kellermann <mk@cm4all.com>  Wed, 07 Jun 2017 21:52:46 -0000

cm4all-workshop (2.0.8) unstable; urgency=low

  * build with Meson and Ninja
  * check for early PostgreSQL errors (e.g. DNS lookup failures)
  * improved uid/gid verify error messages
  * automatically allow uids/gids from Workshop plans
  * doc: document the GRANT on table "cronresults"

 -- Max Kellermann <mk@cm4all.com>  Tue, 04 Apr 2017 10:37:43 -0000

cm4all-workshop (2.0.7) unstable; urgency=low

  * cron: support "special" schedule strings such as "@daily"
  * cron: add special schedule "@once"
