@@ -20,6 +20,12 @@ Instance::Instance(const Config &config,
      child_process_registry(event_loop),
      curl(new CurlGlobal(event_loop))
 {
+    if (!config.partitions.empty()) {
+        library.reset(new MultiLibrary());
+        library->InsertPath("/etc/cm4all/workshop/plans");
+        library->InsertPath("/usr/share/cm4all/workshop/plans");
+    }
+
     auto *ss = StartSpawnServer(config.spawn, child_process_registry,
                                 this,
                                 [this, &in_spawner](){
@@ -32,12 +38,6 @@ Instance::Instance(const Config &config,
 
     shutdown_listener.Enable();
     sighup_event.Enable();
-
-    if (!config.partitions.empty()) {
-        library.reset(new MultiLibrary());
-        library->InsertPath("/etc/cm4all/workshop/plans");
-        library->InsertPath("/usr/share/cm4all/workshop/plans");
-    }
 
     for (const auto &i : config.partitions)
         partitions.emplace_front(*this, *library, *spawn_service,
