@@ -1,6 +1,7 @@
 cm4all-workshop (2.0.14) unstable; urgency=low
 
   * spawn: implement an init process for PID namespaces
+  * workshop: fix plan uid/gid verification
 
  --   
 
